@@ -17,18 +17,22 @@
  */
 package org.apache.drill;
 
+import org.apache.drill.categories.SqlFunctionTest;
 import org.apache.drill.exec.planner.physical.PlannerSettings;
+import org.apache.drill.test.BaseTestQuery;
 import org.joda.time.DateTime;
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
 import org.junit.Ignore;
 import org.junit.Test;
+import org.junit.experimental.categories.Category;
 
 import java.math.BigDecimal;
 
 import static org.apache.drill.exec.expr.fn.impl.DateUtility.formatDate;
 import static org.apache.drill.exec.expr.fn.impl.DateUtility.formatTimeStamp;
 
+@Category(SqlFunctionTest.class)
 public class TestFunctionsQuery extends BaseTestQuery {
 
   // enable decimal data type
@@ -325,7 +329,7 @@ public class TestFunctionsQuery extends BaseTestQuery {
                + "FROM cp.`employee.json` LIMIT 1" )
     .unOrdered()
     .baselineColumns("ShouldBeFLOAT")
-    .baselineValues(new Float(1.5f))
+    .baselineValues(Float.valueOf(1.5f))
     .go();
   }
 
@@ -336,7 +340,7 @@ public class TestFunctionsQuery extends BaseTestQuery {
                + "FROM cp.`employee.json` LIMIT 1" )
     .unOrdered()
     .baselineColumns("ShouldBeDOUBLE")
-    .baselineValues(new Double(1.25))
+    .baselineValues(Double.valueOf(1.25))
     .go();
   }
 
@@ -347,7 +351,7 @@ public class TestFunctionsQuery extends BaseTestQuery {
                + "FROM cp.`employee.json` LIMIT 1" )
     .unOrdered()
     .baselineColumns("ShouldBeBIGINT")
-    .baselineValues(new Long(64))
+    .baselineValues(Long.valueOf(64))
     .go();
   }
 
@@ -358,7 +362,7 @@ public class TestFunctionsQuery extends BaseTestQuery {
                + "FROM cp.`employee.json` LIMIT 1" )
     .unOrdered()
     .baselineColumns("ShouldBeINTEGER")
-    .baselineValues(new Integer(32))
+    .baselineValues(Integer.valueOf(32))
     .go();
   }
 
@@ -370,7 +374,7 @@ public class TestFunctionsQuery extends BaseTestQuery {
                + "FROM cp.`employee.json` LIMIT 1" )
     .unOrdered()
     .baselineColumns("ShouldBeSMALLINT")
-    .baselineValues(new Short((short) 16))
+    .baselineValues(Short.valueOf((short) 16))
     .go();
   }
 
@@ -382,7 +386,7 @@ public class TestFunctionsQuery extends BaseTestQuery {
                + "FROM cp.`employee.json` LIMIT 1" )
     .unOrdered()
     .baselineColumns("ShouldBeTINYINT")
-    .baselineValues(new Byte((byte) 8))
+    .baselineValues(Byte.valueOf((byte) 8))
     .go();
   }
 
@@ -458,8 +462,8 @@ public class TestFunctionsQuery extends BaseTestQuery {
         .sqlQuery(query)
         .unOrdered()
         .baselineColumns("T_1", "T_2", "T_3", "T_4", "T_5", "T_6", "T_7", "T_8", "T_9", "T_10")
-        .baselineValues(new Double("1234.45"), new Double("-1234.45"), new Double("1200.0"), new Double("-1200.0"), new Double("1234.0"),
-            new Double("-1234.0"), new Double("0.0"), new Double("0.0"), new Double("8.1246744073695232E18"), new Double("8.12467440736953E13"))
+        .baselineValues(Double.valueOf("1234.45"), Double.valueOf("-1234.45"), Double.valueOf("1200.0"), Double.valueOf("-1200.0"), Double.valueOf("1234.0"),
+            Double.valueOf("-1234.0"), Double.valueOf("0.0"), Double.valueOf("0.0"), Double.valueOf("8.1246744073695232E18"), Double.valueOf("8.12467440736953E13"))
         .go();
   }
 
@@ -482,8 +486,8 @@ public class TestFunctionsQuery extends BaseTestQuery {
         .sqlQuery(query)
         .unOrdered()
         .baselineColumns("T_1", "T_2", "T_3", "T_4", "T_5", "T_6", "T_7", "T_8", "T_9", "T_10")
-        .baselineValues(new Double("1234.46"), new Double("-1234.46"), new Double("1200.0"), new Double("-1200.0"), new Double("1234.0"),
-            new Double("-1234.0"), new Double("0.0"), new Double("0.0"), new Double("8.1246744073695201E18"), new Double("8.12467440736954E13"))
+        .baselineValues(Double.valueOf("1234.46"), Double.valueOf("-1234.46"), Double.valueOf("1200.0"), Double.valueOf("-1200.0"), Double.valueOf("1234.0"),
+            Double.valueOf("-1234.0"), Double.valueOf("0.0"), Double.valueOf("0.0"), Double.valueOf("8.1246744073695201E18"), Double.valueOf("8.12467440736954E13"))
         .go();
 
   }
@@ -725,7 +729,7 @@ public class TestFunctionsQuery extends BaseTestQuery {
 
   @Test
   public void testNegative() throws Exception {
-    String query = "select  negative(2) as NEG " +
+    String query = "select  negative(cast(2 as bigint)) as NEG " +
         "from cp.`employee.json` where employee_id = 1";
 
     testBuilder()
@@ -921,6 +925,30 @@ public class TestFunctionsQuery extends BaseTestQuery {
             .unOrdered()
             .baselineColumns("col1")
             .baselineValues(false)
+            .go();
+  }
+
+  /**
+  * Test for DRILL-5645, where negation of expressions that do not contain
+  * a RelNode input results in a NullPointerException
+  */
+  @Test
+  public void testNegate() throws Exception {
+    String query = "select -(2 * 2) as col1 from ( values ( 1 ) ) T ( C1 )";
+    testBuilder()
+            .sqlQuery(query)
+            .unOrdered()
+            .baselineColumns("col1")
+            .baselineValues(-4)
+            .go();
+
+    // Test float
+    query = "select -(1.1 * 1) as col1 from ( values ( 1 ) ) T ( C1 )";
+    testBuilder()
+            .sqlQuery(query)
+            .unOrdered()
+            .baselineColumns("col1")
+            .baselineValues(-1.1)
             .go();
   }
 }
